# cot_tampering_detection

./: README.md  pyproject.toml  requirements.txt
cot_integrity/: __init__.py  data.py  detectors.py  features.py  modeling.py  parsing.py  prompts.py  tamper.py  utils.py
scripts/: eval_generalization_prefill.py  paper_style_curves.py  plot_best_layer.py  plot_generalization_auroc.py  plot_overall_metrics.py  plot_posthoc.py  run_posthoc_experiment.py  run_prefill_experiment.py
